# Staggered_1D

./: README.md  environment.yml  finite_volume.py  gitignore.txt  pyproject.toml  solver_pressure_correction_1D.py
solvers/: solver_pressure_correction_1D.py
src/: finite_volume.py
src/finite_volume/: finite_volume.py
