[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "finite_volume"
dynamic = ["version"]
description = 'Discretization using finite volume.'
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-only"

dependencies = ['numpy==2.*']

# Extras (additional dependencies)
[project.optional-dependencies]

# Dependencies for development
dev = []

[tool.hatch]
version.path = "src/finite_volume/__init__.py"
metadata.allow-direct-references = true
